fix width of header paragraph on small screens

--- a/style.css
+++ b/style.css
@@ -201,4 +201,8 @@ i.rose::before {
   #join {
     order: 3;
   }
+
+  header > p {
+    margin: 0 -10%;
+  }
 }
